2009-03-09  higepon  <higepon@users.sourceforge.jp>

        * scripts/binary2c.scm : Set (buffer-mode none). We may have buffering problem.

2009-03-08  kokosabu  <kokosabu@gmail.com>

        * Passed all of file-options pattern tests for output-port.

2009-03-07  higepon  <higepon@users.sourceforge.jp>

        * UTF8Codec.cpp (in): Now (utf-16-codec) raises &i/o-decoding.

        * Added time macro to (mosh) library.

        * bench/run-mosh.scm: Added. Thanks to naoya_t.

        * UtilityProcedures.cpp : Added time-usage. Thanks to naoya_t.

        * lib/mosh/process.ss : Added time macro. Thanks to naoya_t.

        * UTF8Codec.cpp (in): Now (utf-8-codec) raises &i/o-decoding.

        * test/io-error.scm: Added.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss (condition-printer): Changed to print parent fields.

2009-03-05  higepon  <higepon@users.sourceforge.jp>

        * Passed all of file-options pattern tests for input/output-port.

        * configure.ac: Fixed message for GNU MP.

2009-03-04  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Writing (file-options) tests

        * textual-input/output-port passes all tests.

2009-03-03  higepon  <higepon@users.sourceforge.jp>

        * Added textual-input/output-port not TESTed.

        * TranscodedTextualInputOutputPort.h : Added.

        * TranscodedTextualOutputPort.h : Added.

        * TranscodedTextualInputPort.h : Added.

2009-03-02  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryInputOutputPort.cpp (FileBinaryInputOutputPort::readFromFile): Added.

        * BlockBufferedFileBinaryInputOutputPort.h : Added.

        * LineBufferedFileBinaryInputOutputPort.h : Added.

        * Makefile.am (test): Added test/input-output-port.scm to Makefile.asm

        * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort): Passes all tests in input-output-port.scm

2009-02-27  higepon  <higepon@users.sourceforge.jp>
